Updated Video Banner

--- a/features.html
+++ b/features.html
@@ -384,8 +384,11 @@
           <img
             src="/public/product-2.png"
             alt=""
-            class="mt-16 md:mt-72 flex justify-end size-32"
+            class="mt-16 md:mt-72 flex justify-end size-32 z-[100]"
           />
+          <div
+            class="bg-[#37a3f1] absolute blur-3xl rounded-full size-96"
+          ></div>
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-2">
           <p class="border-2 border-white text-white text-xl p-6 rounded-xl">
@@ -401,105 +404,6 @@
           </p>
         </div>
       </div>
-      <!-- <div class="w-full flex flex-col md:flex-row py-28">
-
-        <div
-          class="flex flex-col justify-center items-center w-full md:w-1/3"
-          style="
-            background: radial-gradient(
-              circle at center,
-              #37a3f1 1%,
-              #3a50b3 55%
-            );
-          "
-        >
-          <div class="w-2/4 mb-8 flex flex-col justify-center relative">
-            <h2
-              class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
-            >
-              STEP 2
-            </h2>
-            <div
-              class="h-5 bg-[#C1DFF3] rounded-full mb-6 mt-2 w-full hover:bg-[#97CAEB]"
-              id="step-2"
-            ></div>
-          </div>
-          <div
-            class="flex flex-col w-6/12 justify-center items-center transition-scale duration-300 relative"
-            id="logo"
-          >
-            <img
-              src="./public/Arrow 2.png"
-              alt=""
-              class="absolute opacity-0 size-16"
-              id="arrow"
-            />
-            <img
-              src="/public/step2.1.png"
-              alt=""
-              class="bg-transparent size-42"
-            />
-            <img
-              src="/public/step2.2.png"
-              alt=""
-              class="bg-transparent size-32"
-            />
-          </div>
-        </div>
-        <div
-          class="flex flex-col justify-center items-center w-full md:w-1/3 mt-8 md:mt-0"
-          style="
-            background: radial-gradient(
-              circle at center,
-              #37a3f1 1%,
-              #3a50b3 55%
-            );
-          "
-        >
-          <div class="w-full md:w-2/4 mb-2">
-            <h2
-              class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
-            >
-              STEP 3
-            </h2>
-            <div
-              class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
-            ></div>
-            <img
-              src="/public/product-2.png"
-              alt=""
-              class="mt-16 md:mt-96 flex justify-end "
-            />
-          </div>
-        </div>
-
-        <div
-          class="flex flex-col justify-center items-center w-full md:w-1/3 mt-8 md:mt-0"
-          style="
-            background: radial-gradient(
-              circle at center,
-              #37a3f1 1%,
-              #3a50b3 55%
-            );
-          "
-        >
-          <div class="w-full md:w-2/4 mb-2">
-            <h2
-              class="text-white text-2xl md:text-[46px] concert-one-regular font-normal"
-            >
-              STEP 4
-            </h2>
-            <div
-              class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
-            ></div>
-            <img
-              src="/public/product-3.png"
-              alt=""
-              class="mt-16 md:mt-96 flex md:justify-end"
-            />
-          </div>
-        </div>
-      </div> -->
     </section>
     <!-- How to use Wicked Wipes Mobile Version -->
     <section class="md:hidden block px-10 py-16 md:py-32 bg-[#3A50B3]">
