--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
             Friendly Wipes</h1>
           <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
         </div>
-        <div class="hidden w-screen bg-[url('/public/pods1.png')] bg-contain md:bg-contain bg-right bg-no-repeat" id="welcomeDiv">
+        <div class="hidden w-screen flex z-[100] relative" id="welcomeDiv">
+          <img src="./public/pods1.png" class="absolute top-1 right-32 size-96 object-contain" alt="">
         </div>
         <div class="hidden w-screen flex z-[100]" id="grid">
-          <img src="./public/green 5.svg" alt="" class="size-32 absolute bottom-36 right-48">
-          <img src="./public/green 6.svg" alt="" class="size-32 absolute bottom-16 right-10">
-          <img src="./public/white 3.svg" alt="" class="size-32 absolute bottom-36 right-10">
-          <img src="./public/yellow 3.svg" alt="" class="size-32 absolute bottom-16 right-44">
+          <img src="./public/green 5.svg" alt="" class="md:size-32 size-64 absolute  top-10 right-36 md:bottom-36 md:right-48">
+          <img src="./public/green 6.svg" alt="" class="md:size-32 size-64 absolute top-0 right-10 md:bottom-16 md:right-10">
+          <img src="./public/white 3.svg" alt="" class="md:size-32 size-64 absolute top-20 right-10 md:bottom-36 md:right-10">
+          <img src="./public/yellow 3.svg" alt="" class="md:size-32 size-64 absolute top-28 right-48 md:bottom-16 md:right-44">
         </div>
       </div>
       <video id="videoPlayer" src="./public/landing.mp4" class="object-cover h-[900px] md:h-full " width="100%" loop muted></video>
@@ -205,7 +206,7 @@
 
   <section class=" flex flex-col md:pt-[100px] bg-[#c1eaf3] h-[900px] md:h-screen relative overflow-hidden" id="colorSection">
     <h1 class="px-4 md:px-24 text-[#3a50b3] text-[28px] md:text-[46px] font-['Mitr'] font-normal">
-      Refreshing natural Fragnances
+      Refreshing Natural Fragnances
     </h1>
     <div class="flex flex-col">
       <div class="flex flex-wrap md:flex-nowrap md:gap-x-2 md:px-24">
@@ -249,10 +250,9 @@
     </div>
   </section>
   <!-- Title Content Section -->
-  <section class="px-4 md:px-24 py-3 md:py-16" id="document-title1">
+  <section class="px-4 md:px-24 py-3 md:py-16 opacity-0 transition-opacity duration-300" id="document-title1">
     <div
-      class="flex flex-col justify-center items-center w-full gap-y-10 opacity-0 transition-opacity duration-150 group-hover:opacity-100"
-      id="document-title2">
+      class="flex flex-col justify-center items-center w-full gap-y-10">
       <div class="flex w-full md:px-10 justify-center">
         <h1 class="text-[36px] md:text-[78px] concert-one-regular gradient-text font-medium">
           Wicked Wipes is a smart <br> choice for your business
@@ -303,9 +303,9 @@
 
   <!-- Make it your Brand Section -->
   <section class="px-4 md:px-40 pb-12">
-    <div class="w-full group" id="document-section">
+    <div class="w-full group">
       <div
-        class="md:gap-x-40 flex md:flex-row flex-col justify-between items-center opacity-0 transition-opacity duration-500"
+        class="md:gap-x-40 flex md:flex-row flex-col justify-between items-center opacity-0 transition-opacity duration-300"
         id="document-heading1">
         <div class="flex flex-col md:gap-4 gap-4">
           <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none font-normal">Make It Yours </h1>
@@ -434,12 +434,8 @@
   </script>
   <script>
     const documentSection = document.getElementById("document-section");
-    const documentHeading = document.getElementById("document-heading");
-    const documentHeading1 = document.getElementById("document-heading1");
     const documentHeading2 = document.getElementById("document-heading2");
     const documentTitle = document.getElementById("document-title");
-    const documentTitle1 = document.getElementById("document-title1");
-    const documentTitle2 = document.getElementById("document-title2");
     const documentSlidingCards25 = document.getElementById("document-sliding-cards25");
     const documentSlidingCards50 = document.getElementById("document-sliding-cards50");
     const documentSlidingCards75 = document.getElementById("document-sliding-cards75");
@@ -448,20 +444,11 @@
     function applyAnimations() {
       if (window.innerWidth >= 768) { // Desktop view
         documentSection.addEventListener("mouseover", function () {
-          documentHeading1.classList.add("slide-in-up");
-          documentHeading.classList.add("slide-in-left");
         });
         documentHeading2.addEventListener("mouseover", function () {
           documentTitle.classList.remove("opacity-0");
           documentTitle.classList.add("opacity-100");
         });
-        documentTitle1.addEventListener("mouseover", function () {
-          documentTitle2.classList.add("slide-in-up");
-          documentTitle2.classList.add("opacity-0");
-          documentTitle2.classList.add("opacity-100");
-        });
-        // documentSlidingCards.classList.add("slide-in-left");
-
         // IntersectionObserver to animate documentSlidingCards on scroll
         const observer = new IntersectionObserver((entries) => {
           entries.forEach(entry => {
@@ -486,19 +473,12 @@
           documentSlidingCards75.classList.add('slide-to-start3');
           documentAniVideoCard.classList.add('document-ani-video-card');
         });
-        // documentSlidingCards75.addEventListener('animationend', function () {
-        // });
-
-        // observer.observe(documentSlidingCards50);
       } else {
         // Remove or skip animations for mobile view
         documentHeading1.classList.remove("slide-in-up");
         documentHeading.classList.remove("slide-in-left");
         documentTitle.classList.remove("opacity-0");
         documentTitle.classList.remove("opacity-100");
-        documentTitle2.classList.remove("slide-in-up");
-        documentTitle2.classList.remove("opacity-0");
-        documentTitle2.classList.remove("opacity-100");
       }
     }
 
@@ -531,6 +511,28 @@
   }, 3000);
 </script>
 <script>
+      const documentHeading = document.getElementById("document-heading");
+      const documentHeading1 = document.getElementById("document-heading1");
+      const documentTitle1 = document.getElementById("document-title1");
+      const observe = new IntersectionObserver((entries)=> {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              documentTitle1.classList.add("slide-in-up");
+              documentTitle1.classList.remove("opacity-0");
+              documentTitle1.classList.add("opacity-100");
+            }
+          });
+        })
+        observe.observe(documentTitle1);
+      const brand = new IntersectionObserver((entries)=> {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              documentHeading1.classList.add("slide-in-up");
+              documentHeading.classList.add("slide-in-left");
+            }
+          }); 
+        })
+        brand.observe(documentHeading1, documentHeading);
   let currentImageIndex = 0;
   const images = document.getElementsByClassName('img-pods');
 
@@ -549,7 +551,7 @@
 
   const texts = [
     { text: "Cool", color: "text-[#3a50b3]" },
-    { text: "Green", color: "text-[#147045]" },
+    { text: "Green Tea", color: "text-[#147045]" },
     { text: "Unscented", color: "text-[#687DD2]" },
     { text: "Lemon", color: "text-[#FCD901]" }];
   let currentTextIndex = 0;
