--- a/index.html
+++ b/index.html
@@ -103,31 +103,49 @@
           </ul>
         </div>
       </div>
-      <!-- Video Section -->
-      <div class="flex w-full absolute bottom-10 px-4 md:px-16">
-        <div class="flex flex-col pt-96 h-full w-full text-white"id="topic">
-          <h1 class=" text-[30px] md:text-[40px] concert-one-regular font-normal w-full" id="topic">Hygienic, Safe, Natural,
+      <!-- Video Section Mobile View -->
+      <div class="md:hidden flex flex-col w-full h-full absolute bottom-10 px-4">
+        <div class="hidden w-full flex h-full z-[100] object-contain py-36 overflow-hidden" id="welcomeDiv">
+          <img src="./public/pods1.png" class="absolute size-auto" alt="">
+        </div>
+        <div class="hidden w-full flex h-full z-[100] pt-28 object-contain relative" id="grid">
+          <img src="./public/green 5.svg" alt="" class="size-auto absolute top-20 left-20">
+          <img src="./public/green 6.svg" alt="" class="size-auto absolute top-0 right-2">
+          <img src="./public/white 3.svg" alt="" class="size-auto absolute top-40 right-10">
+          <img src="./public/yellow 3.svg" alt="" class="size-auto absolute top-48 right-56">
+        </div>
+        <div class="flex flex-col pt-48 h-full w-full text-white z-[200]"id="topic">
+          <h1 class=" text-[30px] concert-one-regular font-normal w-full" id="topic">Hygienic, Safe, Natural,
             Environmentally
             Friendly Wipes</h1>
           <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
         </div>
-        <div class="hidden w-screen flex z-[100] relative" id="welcomeDiv">
-          <img src="./public/pods1.png" class="absolute top-1 right-32 size-96 object-contain" alt="">
+      </div>
+            <!-- Video Section desktop View -->
+      <div class="hidden md:flex w-full h-full px-10 absolute">
+        <div class="flex flex-col w-full text-white absolute bottom-0" id="topic1">
+          <h1 class=" text-[30px] concert-one-regular font-normal w-full" id="topic1">Hygienic, Safe, Natural,
+            Environmentally
+            Friendly Wipes</h1>
+          <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
         </div>
-        <div class="hidden w-screen flex z-[100] relative" id="grid">
-          <img src="./public/green 5.svg" alt="" class="md:size-32 size-96 absolute top-10 right-36 md:bottom-36 md:right-48 object-contain">
-          <img src="./public/green 6.svg" alt="" class="md:size-32 size-96 absolute top-0 right-10 md:bottom-16 md:right-10 object-contain">
-          <img src="./public/white 3.svg" alt="" class="md:size-32 size-96 absolute top-20 right-10 md:bottom-36 md:right-10 object-contain">
-          <img src="./public/yellow 3.svg" alt="" class="md:size-32 size-96 absolute top-28 right-48 md:bottom-16 md:right-44 object-contain">
+        <div class="hidden w-full flex h-full py-36 object-contain" id="welcomeDiv-1">
+          <img src="./public/pods1.png" class="absolute size-auto" alt="">
+        </div>
+        <div class="hidden w-full flex h-full" id="grid-1">
+          <img src="./public/green 5.svg" alt="" class="size-auto absolute bottom-10 right-36">
+          <img src="./public/green 6.svg" alt="" class="size-auto absolute bottom-0 right-10">
+          <img src="./public/white 3.svg" alt="" class="size-auto absolute bottom-20 right-10">
+          <img src="./public/yellow 3.svg" alt="" class="size-auto absolute bottom-28 right-48">
         </div>
       </div>
-      <video id="videoPlayer" src="./public/landing.mp4" class="object-cover h-[900px] md:h-full " width="100%" loop muted></video>
+      <video id="videoPlayer" src="./public/landing.mp4" class="object-cover md:h-full h-[900px]" width="100%" loop muted></video>
     </div>
   </section>
 
   <!-- Video and Features Section -->
 
-  <section class="w-full flex flex-col" id="document-heading2">
+  <section class="w-full flex flex-col">
     <div class="w-full flex flex-col md:flex-row md:px-24 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
       <div class="w-full">
         <h1 class="text-4xl text-nowrap font-['Mitr'] font-medium gradient-text">
@@ -145,8 +163,8 @@
       </div>
     </div>
 
-    <div class="md:flex justify-around mx-4">
-      <div class="">
+    <div class="md:flex justify-around mx-4 overflow-hidden">
+      <div class="overflow-hidden relative w-full">
         <div id="document-sliding-cards25"
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
           <img src="./public/water-drop.png" alt="">
@@ -196,7 +214,7 @@
     </div>
     <div class="flex w-full my-10">
       <h1 class="px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center hover:text-[#3A50B3] font-medium">
-        Let’s make hygiene not only a priority but desirable too!
+        Let’s make hygiene fun and desirable!
       </h1>
     </div>
   </section>
@@ -407,9 +425,13 @@
   <script>
   document.addEventListener('DOMContentLoaded', function () {
     const gradient = document.getElementById('gradient');
+    const gradient1 = document.getElementById('gradient-1');
     const grid = document.getElementById('grid');
+    const grid1 = document.getElementById('grid-1');
     const topic = document.getElementById('topic');
+    const topic1 = document.getElementById('topic1');
     const welcomeDiv = document.getElementById('welcomeDiv');
+    const welcomeDiv1 = document.getElementById('welcomeDiv-1');
     const videoPlayer = document.getElementById('videoPlayer');
     videoPlayer.classList.add('opacity-0');
     gradient.classList.add('bg-radial-gradient');
@@ -418,11 +440,15 @@
     const isMobile = window.matchMedia('(max-width: 767px)').matches;
       setTimeout(() => {
         welcomeDiv.classList.add('pods');
+        welcomeDiv1.classList.add('pods');
        setTimeout(() => {
         grid.classList.remove('hidden');
+        grid1.classList.remove('hidden');
         gradient.classList.remove('bg-radial-gradient');
         gradient.classList.add('bg-white');
         topic.classList.remove('text-white');
+        topic1.classList.remove('text-white');
+        topic1.classList.add('text-[#97CAEB]');
         topic.classList.add('text-[#97CAEB]');
         if (isDesktop) {
             const slideBlueElement = [
@@ -437,7 +463,7 @@
             const slideYellowElement = [
                 './public/yellow 3.svg',
             ];
-                grid.querySelectorAll('img').forEach(element => {
+                grid1.querySelectorAll('img').forEach(element => {
                    const imgSrc1 = element.getAttribute('src');
 
                    if(slideBlueElement.includes(imgSrc1)){
@@ -454,7 +480,7 @@
                    }
                 });
                 setTimeout(() => {
-                    grid.classList.add('slide-out-right');
+                    grid1.classList.add('slide-out-right');
                 }, 200);
             }
         if (isMobile) {
@@ -478,6 +504,9 @@
                         element.classList.add('slide-green');
                     }
                 });
+                setTimeout(() => {
+                    grid.classList.add('slide-out-right');
+                }, 200);
             }
         setTimeout(() => {
           videoPlayer.classList.add('opacity-100');
@@ -488,6 +517,9 @@
 });
   </script>
   <script>
+
+  </script>
+  <script>
     const documentSection = document.getElementById("document-section");
     const documentHeading2 = document.getElementById("document-heading2");
     const documentTitle = document.getElementById("document-title");
@@ -496,15 +528,7 @@
     const documentSlidingCards75 = document.getElementById("document-sliding-cards75");
     const documentAniVideoCard = document.getElementById("document-ani-video-card");
 
-    function applyAnimations() {
-      if (window.innerWidth >= 768) { // Desktop view
-        documentSection.addEventListener("mouseover", function () {
-        });
-        documentHeading2.addEventListener("mouseover", function () {
-          documentTitle.classList.remove("opacity-0");
-          documentTitle.classList.add("opacity-100");
-        });
-        // IntersectionObserver to animate documentSlidingCards on scroll
+
         const observer = new IntersectionObserver((entries) => {
           entries.forEach(entry => {
             if (entry.isIntersecting) {
@@ -512,6 +536,17 @@
             }
           });
         });
+
+        const observer2 = new IntersectionObserver((entries) => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              documentTitle.classList.remove("opacity-0");
+              documentTitle.classList.add("opacity-100");
+            }
+          });
+        });
+
+        observer2.observe(documentTitle);
 
         observer.observe(documentSlidingCards25);
 
@@ -521,25 +556,11 @@
         documentSlidingCards50.addEventListener('animationend', function () {
           documentSlidingCards75.classList.add('slide-left-cards75');
         });
-
-
         documentSlidingCards75.addEventListener('animationend', function () {
           documentSlidingCards50.classList.add('slide-to-start2');
           documentSlidingCards75.classList.add('slide-to-start3');
           documentAniVideoCard.classList.add('document-ani-video-card');
         });
-      } else {
-        // Remove or skip animations for mobile view
-        documentHeading1.classList.remove("slide-in-up");
-        documentHeading.classList.remove("slide-in-left");
-        documentTitle.classList.remove("opacity-0");
-        documentTitle.classList.remove("opacity-100");
-      }
-    }
-
-    // Apply animations on page load and resize
-    applyAnimations();
-    window.addEventListener('resize', applyAnimations);
   </script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
