--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             Friendly Wipes</h1>
           <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
         </div>
-        <div class="hidden w-full flex h-full py-36 object-contain" id="welcomeDiv-1">
-          <img src="./public/pods1.png" class="absolute size-auto" alt="">
+        <div class="w-full h-full flex justify-end object-contain" id="welcomeDiv-1">
+          <img src="./public/pods1.png" class="" alt="">
         </div>
         <div class="hidden w-full flex h-full" id="grid-1">
           <img src="./public/green 5.svg" alt="" class="size-auto absolute bottom-32 right-56">
