Updated homepage layout

--- a/features.html
+++ b/features.html
@@ -775,10 +775,10 @@
         <div
           class="flex flex-col justify-around md:w-3/5 bg-[#3A50B3] p-3 md:p-20 shadow-md rounded-md"
         >
-          <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
+          <h1 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
             Get in Touch with Us
           </h1>
-          <h2 class="text-white text-xl font-['Urbanist'] font-bold">
+          <h2 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
             to discuss your issues in Wicked Wipes
           </h2>
           <div class="w-full md:px-8 py-8 md:pt-24 flex gap-x-6">
