--- a/private-label.html
+++ b/private-label.html
@@ -339,7 +339,7 @@
           <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
             Get in Touch with Us
           </h1>
-          <h2 class="text-white text-xl font-['Urbanist'] font-bold">
+          <h2 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
             to discuss your issues in Wicked Wipes
           </h2>
           <div class="w-full md:px-8 py-8 md:pt-24 flex gap-x-6">
