--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </div>
 
-    <div class="md:flex justify-around mx-4 overflow-hidden">
+    <div class="md:flex justify-around mx-4 overflow-hidden md:overflow-hidden">
       <div class="overflow-hidden relative w-full">
         <div id="document-sliding-cards25"
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
@@ -195,9 +195,9 @@
           </div>
         </div>
       </div>
-      <div id="document-ani-video-card" class=" md:opacity-0">
+      <div id="document-ani-video-card" class=" md:opacity-0 md:overflow-hidden">
         <div class="relative w-full max-w-xl overflow-hidden shadow-xl rounded-3xl z-100">
-          <video src="./public/animation-video.mp4" class="w-full transform transition-transform scale-125 "
+          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 overflow-hidden md:overflow-hidden"
             type="video/mp4" autoplay muted loop></video>
         </div>
         <div class="flex flex-col justify-center items-center">
@@ -212,7 +212,7 @@
     <div class="w-full h-[700px] my-10">
       <video src="/public/bg-ad.mp4" class="w-full h-full object-cover" type="video/mp4" autoplay muted loop></video>
     </div>
-    <div class="flex w-full my-10">
+    <div class="flex w-full my-10 justify-center">
       <h1 class="px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center hover:text-[#3A50B3] font-medium">
         Let’s make hygiene fun and desirable!
       </h1>
@@ -316,7 +316,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-white relative bottom-20 h-36 w-full z-[100] rounded-[50%]"></div>
+    <div class="bg-white relative bottom-20 md:h-36 h-28 w-full z-[100] rounded-[25%] md:rounded-[40%]"></div>
   </section>
 
   <!-- Make it your Brand Section -->
@@ -349,10 +349,10 @@
   <section class="px-4 md:px-36 py-3 md:py-28 w-full" id="target-section">
     <div class="flex flex-col md:flex-row w-full">
       <div class="flex flex-col justify-around md:w-3/5 bg-[#3A50B3] p-3 md:p-20 shadow-md rounded-md">
-        <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
+        <h1 class="text-white text-[28px] urbanist-regular font-bold">
           Get in Touch with Us
         </h1>
-        <h2 class="text-white text-xl font-['Urbanist'] font-bold">
+        <h2 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
           to discuss your issues in Wicked Wipes
         </h2>
         <div class="w-full md:px-8 py-8 md:pt-24 flex gap-x-6">
@@ -482,6 +482,12 @@
                 setTimeout(() => {
                     grid1.classList.add('slide-out-right');
                 }, 200);
+                grid1.addEventListener('animationend', () => {
+                    setTimeout(() => {
+                        grid1.classList.add('hidden');
+                    }, 1000); // 200ms delay before hiding
+                });
+
             }
         if (isMobile) {
                 const slideBlueElements = [
@@ -504,9 +510,11 @@
                         element.classList.add('slide-green');
                     }
                 });
-                setTimeout(() => {
-                    grid.classList.add('slide-out-right');
-                }, 200);
+                grid.addEventListener('animationend', () => {
+                    setTimeout(() => {
+                        grid.classList.add('hidden');
+                    }, 500); // 200ms delay before hiding
+                });
             }
         setTimeout(() => {
           videoPlayer.classList.add('opacity-100');
