Updated Video banner and removed horizontal Scroll

--- a/features.html
+++ b/features.html
@@ -362,7 +362,7 @@
             ></div>
           </div>
         </div>
-         <!-- Step 3 -->
+        <!-- Step 3 -->
         <div class="flex items-center justify-center w-56" id="items-3">
           <img
             src="./public/Arrow 1.png"
@@ -771,14 +771,18 @@
 
     <!-- Form Section -->
     <section class="px-4 md:px-36 py-3 md:py-28 w-full" id="target-section">
-      <div class="flex flex-col md:flex-row w-full">
+      <div class="flex flex-col md:flex-row w-full overflow-hidden">
         <div
           class="flex flex-col justify-around md:w-3/5 bg-[#3A50B3] p-3 md:p-20 shadow-md rounded-md"
         >
-          <h1 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
+          <h1
+            class="text-white text-[28px] urbanist-regular font-bold md:text-nowrap"
+          >
             Get in Touch with Us
           </h1>
-          <h2 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
+          <h2
+            class="text-white text-[28px] urbanist-regular font-bold md:text-nowrap"
+          >
             to discuss your issues in Wicked Wipes
           </h2>
           <div class="w-full md:px-8 py-8 md:pt-24 flex gap-x-6">
@@ -862,7 +866,7 @@
             <button
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
-              Send Message
+              Let's Connect
             </button>
           </div>
         </div>
