--- a/private-label.html
+++ b/private-label.html
@@ -339,7 +339,9 @@
           <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
             Get in Touch with Us
           </h1>
-          <h2 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
+          <h2
+            class="text-white text-[28px] urbanist-regular font-bold text-nowrap"
+          >
             to discuss your issues in Wicked Wipes
           </h2>
           <div class="w-full md:px-8 py-8 md:pt-24 flex gap-x-6">
@@ -423,7 +425,7 @@
             <button
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
-              Send Message
+              Let's Connect
             </button>
           </div>
         </div>
