--- a/testimonials.html
+++ b/testimonials.html
@@ -235,10 +235,14 @@
         <div
           class="flex flex-col justify-around md:w-3/5 bg-[#3A50B3] p-3 md:p-20 shadow-md rounded-md"
         >
-          <h1 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
+          <h1
+            class="text-white text-[28px] urbanist-regular font-bold text-nowrap"
+          >
             Get in Touch with Us
           </h1>
-          <h2 class="text-white text-[28px] urbanist-regular font-bold text-nowrap">
+          <h2
+            class="text-white text-[28px] urbanist-regular font-bold text-nowrap"
+          >
             to discuss your issues in Wicked Wipes
           </h2>
           <div class="w-full md:px-8 py-8 md:pt-24 flex gap-x-6">
@@ -322,7 +326,7 @@
             <button
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
-              Send Message
+              Let's Connect
             </button>
           </div>
         </div>
@@ -390,23 +394,23 @@
     <script>
       const details = document.getElementById("info");
 
-// Function to handle intersection
-function handleIntersection(entries) {
-  entries.forEach((entry) => {
-    if (entry.isIntersecting) {
-      details.classList.remove("opacity-0");
-      details.classList.add("opacity-100");
-    }
-  });
-}
+      // Function to handle intersection
+      function handleIntersection(entries) {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            details.classList.remove("opacity-0");
+            details.classList.add("opacity-100");
+          }
+        });
+      }
 
-// Create an Intersection Observer
-const observer = new IntersectionObserver(handleIntersection, {
-  threshold: 0.1, // Trigger when 10% of the section is visible
-});
+      // Create an Intersection Observer
+      const observer = new IntersectionObserver(handleIntersection, {
+        threshold: 0.1, // Trigger when 10% of the section is visible
+      });
 
-// Observe the section
-observer.observe(details);
+      // Observe the section
+      observer.observe(details);
     </script>
   </body>
 </html>
